--- a/refs.bib
+++ b/refs.bib
@@ -693,3 +693,79 @@ url = {http://www.sciencedirect.com/science/article/pii/0022399994900051},
 volume = {38},
 year = {1994}
 }
+
+@article{Bressi1996,
+author = {Bressi, Cinza and Taylor, Graeme and Parker, James and Bressi, Sergio and Brambilla, Virginia and Aguglia, Eugenio and Allegranti, Ida and Bongiorno, Antonio and Giberti, Franco and Bucca, Maurizio and Todarello, Orlando and Callegari, Camilla and Vender, Simone and Constanzo, Gala and Invernizzi, Giordano},
+file = {:home/whn/data/Mendeley Desktop/Journal of \ldots/Bressi et al.\_1996\_Cross validation of the factor structure of the 20-item Toronto Alexithymia Scale an Italian multicenter study.pdf:pdf},
+journal = {Journal of Psychosomatic Research},
+mendeley-groups = {mag\_dsv},
+title = {{Cross validation of the factor structure of the 20-item Toronto Alexithymia Scale: an Italian multicenter study}},
+url = {http://www.sciencedirect.com/science/article/pii/S0022399996002280},
+year = {1996}
+}
+
+@article{Berthoz2002,
+author = {Berthoz, S and Artiges, Eric and Moortele, PF Van De},
+doi = {10.1176/appi.ajp.159.6.961},
+file = {:home/whn/data/Mendeley Desktop/American Journal of Psychiatry/Berthoz, Artiges, Moortele\_2002\_Effect of impaired recognition and expression of emotions on frontocingulate cortices an fMRI study of m.pdf:pdf},
+journal = {American Journal of Psychiatry},
+mendeley-groups = {mag\_dsv},
+number = {6},
+pages = {961--967},
+pmid = {12042184},
+title = {{Effect of impaired recognition and expression of emotions on frontocingulate cortices: an fMRI study of men with alexithymia}},
+url = {http://ajp.psychiatryonline.org/doi/10.1176/appi.ajp.159.6.961},
+volume = {159},
+year = {2002}
+}
+
+@article{Yildirim2011,
+author = {Yildirim, EA and Kasar, M and G\"{u}d\"{u}k, M and Ateş, E and K\"{u}\c{c}\"{u}kparlak, I and \"{O}zalmete, EO},
+file = {:home/whn/data/Mendeley Desktop/Turkish Journal of Psychiatry/Yildirim et al.\_2011\_Investigation of the reliability of the “Reading the Mind in the Eyes test” in a Turkish population.pdf:pdf},
+journal = {Turkish Journal of Psychiatry},
+keywords = {cognition,emotion,in a turkish population,investigation of the reliability,of the,reading the mind in,reliability,the eyes test,theory of mind},
+mendeley-groups = {mag\_dsv},
+pages = {1--8},
+title = {{Investigation of the reliability of the “Reading the Mind in the Eyes test” in a Turkish population}},
+url = {http://www.turkpsikiyatri.com/data/unpublishedarticles/c192uc.pdf},
+volume = {22},
+year = {2011}
+}
+
+@article{Yildirim2011,
+author = {Yildirim, EA and Kasar, M and G\"{u}d\"{u}k, M and Ateş, E and K\"{u}\c{c}\"{u}kparlak, I and \"{O}zalmete, EO},
+file = {:home/whn/data/Mendeley Desktop/Turkish Journal of Psychiatry/Yildirim et al.\_2011\_Investigation of the reliability of the “Reading the Mind in the Eyes test” in a Turkish population.pdf:pdf},
+journal = {Turkish Journal of Psychiatry},
+keywords = {cognition,emotion,in a turkish population,investigation of the reliability,of the,reading the mind in,reliability,the eyes test,theory of mind},
+mendeley-groups = {mag\_dsv},
+pages = {1--8},
+title = {{Investigation of the reliability of the “Reading the Mind in the Eyes test” in a Turkish population}},
+url = {http://www.turkpsikiyatri.com/data/unpublishedarticles/c192uc.pdf},
+volume = {22},
+year = {2011}
+}
+
+@article{Hallerback2009,
+abstract = {INTRODUCTION: The Reading the Mind in the Eyes Test is a widely used facial affect recognition test. The present study aimed to provide Swedish nonpatient reference values, examine test-retest reliability, and to elucidate strengths and weaknesses of the instrument.
+
+METHODS: A Swedish version of the test was completed by 158 university students. Fifty-eight participants completed the test twice, 3 weeks apart. The Bland Altman method was used to examine the test-retest reliability.
+
+RESULTS: Distribution of responses of the 158 participants is detailed and compared with the English version. The limits of agreement was +/-4.3.
+
+CONCLUSIONS: A test score variation in the range of +/-4 (out of 24 possible) is to be expected for the same individual. When the Reading the Mind in the Eyes Test is used, one has to take into account that an obtained test score must be regarded as an approximation.},
+author = {Hallerb\"{a}ck, Maria Unenge and Lugneg\aa rd, Tove and Hj\"{a}rthag, Fredrik and Gillberg, Christopher},
+doi = {10.1080/13546800902901518},
+file = {:home/whn/data/Mendeley Desktop/Cognitive neuropsychiatry/Hallerb\"{a}ck et al.\_2009\_The Reading the Mind in the Eyes Test test-retest reliability of a Swedish version.pdf:pdf},
+issn = {1464-0619},
+journal = {Cognitive neuropsychiatry},
+keywords = {Adult,Affect,Affect: physiology,Data Interpretation, Statistical,Facial Expression,Female,Humans,Language,Male,Psychological Tests,Recognition (Psychology),Recognition (Psychology): physiology,Reproducibility of Results,Sex Characteristics,Sweden,Young Adult},
+mendeley-groups = {mag\_dsv},
+month = mar,
+number = {2},
+pages = {127--43},
+pmid = {19370436},
+title = {{The Reading the Mind in the Eyes Test: test-retest reliability of a Swedish version.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/19370436},
+volume = {14},
+year = {2009}
+}
