--- a/refs.bib
+++ b/refs.bib
@@ -769,3 +769,23 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/19370436},
 volume = {14},
 year = {2009}
 }
+
+@book{Denscombe2010,
+  title={The good research guide: For small-scale social research projects: For small-scale social research projects},
+  author={Denscombe, Martyn},
+  year={2010},
+  publisher={McGraw-Hill International}
+}
+
+@book{Johannesson2014,
+author = {Johannesson, Paul and Perjons, Erik},
+doi = {10.1007/978-3-319-10632-8},
+edition = {4},
+file = {:home/whn/data/Mendeley Desktop/Unknown/Johannesson, Perjons\_2014\_An Introduction to Design Science.pdf:pdf},
+isbn = {978-3-319-10632-8},
+mendeley-groups = {mag\_dsv},
+publisher = {Springer International Publishing},
+title = {{An Introduction to Design Science}},
+url = {http://books.google.com/books?hl=en\&lr=\&id=ovvFBAAAQBAJ\&oi=fnd\&pg=PR5\&dq=An+introduction+to+design+science\&ots=r46R1mQGra\&sig=WL0duRAXRLjUg4dkKpG-ug11c7o http://books.google.com/books?hl=en\&lr=\&id=ovvFBAAAQBAJ\&oi=fnd\&pg=PR5\&dq=An+Introduction+to+Design+Science\&ots=r46R1mQGsa\&sig=r4-yHPSRuNRO5CZ0f87RBidNsus},
+year = {2014}
+}
