--- a/summaryearlier.tex
+++ b/summaryearlier.tex
@@ -1,10 +1,10 @@
 
 \begin {table}[H]
   \caption{Quantitative data sources}
-  \begin{tabularx}{\textwidth}{llll}
-    \textbf{Subjects} & \textbf{Stimulus-set} & \textbf{$N_{subjects}$} & \textbf{Exposure (\si{\milli\second})} \\
+  \begin{tabularx}{\textwidth}{lllll}
+    & \textbf{Subjects} & \textbf{Stimulus-set} & \textbf{$N_{subjects}$} & \textbf{Exposure (\si{\milli\second})} \\
     \toprule
-    University students & RaFD & 50 & 200 \\
-    Psychotherapists vs. University students & RaFD? & 72 & 200
+    1 & University students & RaFD & 50 & 200 \\
+    2 & Psychotherapists vs. University students & RaFD? & 72 & 200
   \end{tabularx}
 \end{table}
